# sim-flatland

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.nvidia.yml  docker-compose.yml  entrypoint.sh
.github/: CODEOWNERS
config/: diagnostics_aggregator.yaml  flatland_rviz.rviz  nav2_params.yaml
diagnostics_watcher/: package.xml  setup.cfg  setup.py
diagnostics_watcher/diagnostics_watcher/: status_logic.py  watcher_node.py
diagnostics_watcher/test/: test_status_logic.py
launch/: flatland_nav2.launch.py
local/: agent.env.sh.example
maps/: sample_map.pgm  sample_map.yaml
oro-config/: .gitignore  README  config.yaml  timeline.yaml
patches/flatland/: 0001-Add-missing-cstdint-include-for-C-17.patch  0002-Add-missing-array-include-in-types.h.patch  0003-Use-tf2_geometry_msgs-.hpp-header-path-for-ROS2.patch  0004-Replace-deprecated-CV_LOAD_IMAGE_GRAYSCALE-with-cv-I.patch  0005-Clean-up-flatland_server-CMakeLists-for-Jazzy.patch  0006-Add-explicit-types-and-defaults-to-declare_parameter.patch  0007-flatland_plugins-CMakeLists-Jazzy-compat-missing-dep.patch  0008-Use-rclcpp-Duration-from_seconds-for-integer-seconds.patch  0009-Fix-plugin_description.xml-library-path-for-Jazzy-pl.patch  0010-diff_drive-default-initialize-twist_msg_-to-avoid-nu.patch  0011-flatland_plugins-register-battery-plugin-source-proj.patch  (+4 more)
plugins/: battery.cpp  battery.h  camera.cpp  camera.h  camera_math.h
republisher/: package.xml  setup.py
republisher/republisher/: republisher_node.py
worlds/: sample.world.yaml  turtlebot.model.yaml
(+5 files in other folders)
